tests/errors/embedFileMissing.milo
// @error: cannot open 'nonexistent.txt'
fn main(): i32 {
    let x = embedFile("nonexistent.txt")
    return 0
}
